# pet_king5_bevy

./: .gitignore  Cargo.toml
assets/: pet_king5.ldtk
assets/player/: 0.aseprite
src/: assembly.rs  bootstrap.rs  engine.rs  game.rs  lib.rs  main.rs
src/engine/: position.rs
src/game/: camera.rs  collision.rs  core.rs  cream.rs  player.rs  world.rs
src/game/core/: camera_target.rs  collision.rs  map.rs  player_spawn.rs
